<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".SubirImagen">

    <Button
    android:id="@+id/boton4"
    android:layout_width="236dp"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginEnd="98dp"
    android:layout_marginBottom="645dp"
    android:background="@drawable/boton_redondo"
    android:text="@string/seleccionar_imagen"
    android:textColor="#ffff"
    tools:layout_editor_absoluteX="235dp"
    tools:layout_editor_absoluteY="578dp" />

    <Button
        android:id="@+id/boton5"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="263dp"
        android:background="@drawable/boton_destacado"
        android:text="@string/subir_foto"
        android:textColor="#ffff"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="578dp" />

    <ImageView
        android:id="@+id/img_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="265dp" />

    <Button
        android:id="@+id/boton3"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/boton_redondo"
        android:onClick="Regresar"
        android:text="@string/regresar"
        android:textColor="#ffff"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="578dp" />

</RelativeLayout>