<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/boton3"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="640dp"
        android:background="@drawable/boton_redondo"
        android:onClick="subirImagen"
        android:text="@string/subir_imagen"
        android:textColor="#ffff"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="578dp" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="143dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/boton_redondo"
        android:onClick="openGallery"
        android:text="@string/galeria"
        android:textColor="#ffff"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="578dp" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="146dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="603dp"
        android:background="@drawable/boton_redondo"
        android:onClick="openCamera"
        android:text="@string/escaner"
        android:textColor="#ffff"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="578dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="245dp"
        android:layout_height="357dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        app:srcCompat="@drawable/imgescaner"
       />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="373dp"
        android:layout_height="168dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="234dp"
        app:srcCompat="@drawable/apptitulo"
         />

</RelativeLayout>